3.7.0/_sources/plot_types/index.rst.txt
:orphan:

.. _plot_types:

.. redirect-from:: /tutorials/basic/sample_plots

Plot types
==========

Overview of many common plotting commands in Matplotlib.

Note that we have stripped all labels, but they are present by default.
See the `gallery <../gallery/index.html>`_ for many more examples and
the `tutorials page <../tutorials/index.html>`_ for longer examples.



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    </div>


Basic
-----

Basic plot types, usually y versus x.



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~matplotlib.axes.Axes.plot.">

.. only:: html

  .. image:: /plot_types/basic/images/thumb/sphx_glr_plot_thumb.png
    :alt: plot(x, y)

  :ref:`sphx_glr_plot_types_basic_plot.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">plot(x, y)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~matplotlib.axes.Axes.scatter.">

.. only:: html

  .. image:: /plot_types/basic/images/thumb/sphx_glr_scatter_plot_thumb.png
    :alt: scatter(x, y)

  :ref:`sphx_glr_plot_types_basic_scatter_plot.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">scatter(x, y)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~matplotlib.axes.Axes.bar.">

.. only:: html

  .. image:: /plot_types/basic/images/thumb/sphx_glr_bar_thumb.png
    :alt: bar(x, height)

  :ref:`sphx_glr_plot_types_basic_bar.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">bar(x, height)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~matplotlib.axes.Axes.stem.">

.. only:: html

  .. image:: /plot_types/basic/images/thumb/sphx_glr_stem_thumb.png
    :alt: stem(x, y)

  :ref:`sphx_glr_plot_types_basic_stem.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">stem(x, y)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~matplotlib.axes.Axes.step.">

.. only:: html

  .. image:: /plot_types/basic/images/thumb/sphx_glr_step_thumb.png
    :alt: step(x, y)

  :ref:`sphx_glr_plot_types_basic_step.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">step(x, y)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~matplotlib.axes.Axes.fill_between.">

.. only:: html

  .. image:: /plot_types/basic/images/thumb/sphx_glr_fill_between_thumb.png
    :alt: fill_between(x, y1, y2)

  :ref:`sphx_glr_plot_types_basic_fill_between.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">fill_between(x, y1, y2)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="stackplot(x, y)">

.. only:: html

  .. image:: /plot_types/basic/images/thumb/sphx_glr_stackplot_thumb.png
    :alt: stackplot(x, y)

  :ref:`sphx_glr_plot_types_basic_stackplot.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">stackplot(x, y)</div>
    </div>


.. raw:: html

    </div>


Plots of arrays and fields
--------------------------

Plotting for arrays of data ``Z(x, y)`` and fields ``U(x, y), V(x, y)``.



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~matplotlib.axes.Axes.imshow.">

.. only:: html

  .. image:: /plot_types/arrays/images/thumb/sphx_glr_imshow_thumb.png
    :alt: imshow(Z)

  :ref:`sphx_glr_plot_types_arrays_imshow.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">imshow(Z)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="~.axes.Axes.pcolormesh is more flexible than ~.axes.Axes.imshow in that the x and y vectors nee...">

.. only:: html

  .. image:: /plot_types/arrays/images/thumb/sphx_glr_pcolormesh_thumb.png
    :alt: pcolormesh(X, Y, Z)

  :ref:`sphx_glr_plot_types_arrays_pcolormesh.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">pcolormesh(X, Y, Z)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~matplotlib.axes.Axes.contour.">

.. only:: html

  .. image:: /plot_types/arrays/images/thumb/sphx_glr_contour_thumb.png
    :alt: contour(X, Y, Z)

  :ref:`sphx_glr_plot_types_arrays_contour.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">contour(X, Y, Z)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~matplotlib.axes.Axes.contourf.">

.. only:: html

  .. image:: /plot_types/arrays/images/thumb/sphx_glr_contourf_thumb.png
    :alt: contourf(X, Y, Z)

  :ref:`sphx_glr_plot_types_arrays_contourf.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">contourf(X, Y, Z)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~matplotlib.axes.Axes.barbs.">

.. only:: html

  .. image:: /plot_types/arrays/images/thumb/sphx_glr_barbs_thumb.png
    :alt: barbs(X, Y, U, V)

  :ref:`sphx_glr_plot_types_arrays_barbs.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">barbs(X, Y, U, V)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~matplotlib.axes.Axes.quiver.">

.. only:: html

  .. image:: /plot_types/arrays/images/thumb/sphx_glr_quiver_thumb.png
    :alt: quiver(X, Y, U, V)

  :ref:`sphx_glr_plot_types_arrays_quiver.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">quiver(X, Y, U, V)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~matplotlib.axes.Axes.streamplot.">

.. only:: html

  .. image:: /plot_types/arrays/images/thumb/sphx_glr_streamplot_thumb.png
    :alt: streamplot(X, Y, U, V)

  :ref:`sphx_glr_plot_types_arrays_streamplot.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">streamplot(X, Y, U, V)</div>
    </div>


.. raw:: html

    </div>


Statistics plots
----------------

Plots for statistical analysis.



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~matplotlib.axes.Axes.hist.">

.. only:: html

  .. image:: /plot_types/stats/images/thumb/sphx_glr_hist_plot_thumb.png
    :alt: hist(x)

  :ref:`sphx_glr_plot_types_stats_hist_plot.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">hist(x)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~matplotlib.axes.Axes.boxplot.">

.. only:: html

  .. image:: /plot_types/stats/images/thumb/sphx_glr_boxplot_plot_thumb.png
    :alt: boxplot(X)

  :ref:`sphx_glr_plot_types_stats_boxplot_plot.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">boxplot(X)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~matplotlib.axes.Axes.errorbar.">

.. only:: html

  .. image:: /plot_types/stats/images/thumb/sphx_glr_errorbar_plot_thumb.png
    :alt: errorbar(x, y, yerr, xerr)

  :ref:`sphx_glr_plot_types_stats_errorbar_plot.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">errorbar(x, y, yerr, xerr)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~matplotlib.axes.Axes.violinplot.">

.. only:: html

  .. image:: /plot_types/stats/images/thumb/sphx_glr_violin_thumb.png
    :alt: violinplot(D)

  :ref:`sphx_glr_plot_types_stats_violin.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">violinplot(D)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~matplotlib.axes.Axes.eventplot.">

.. only:: html

  .. image:: /plot_types/stats/images/thumb/sphx_glr_eventplot_thumb.png
    :alt: eventplot(D)

  :ref:`sphx_glr_plot_types_stats_eventplot.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">eventplot(D)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~matplotlib.axes.Axes.hist2d.">

.. only:: html

  .. image:: /plot_types/stats/images/thumb/sphx_glr_hist2d_thumb.png
    :alt: hist2d(x, y)

  :ref:`sphx_glr_plot_types_stats_hist2d.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">hist2d(x, y)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~matplotlib.axes.Axes.hexbin.">

.. only:: html

  .. image:: /plot_types/stats/images/thumb/sphx_glr_hexbin_thumb.png
    :alt: hexbin(x, y, C)

  :ref:`sphx_glr_plot_types_stats_hexbin.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">hexbin(x, y, C)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~matplotlib.axes.Axes.pie.">

.. only:: html

  .. image:: /plot_types/stats/images/thumb/sphx_glr_pie_thumb.png
    :alt: pie(x)

  :ref:`sphx_glr_plot_types_stats_pie.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">pie(x)</div>
    </div>


.. raw:: html

    </div>


Unstructured coordinates
-------------------------

Sometimes we collect data ``z`` at coordinates ``(x,y)`` and want to visualize
as a contour.  Instead of gridding the data and then using
`~.axes.Axes.contour`, we can use a triangulation algorithm and fill the
triangles.



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~matplotlib.axes.Axes.tricontour.">

.. only:: html

  .. image:: /plot_types/unstructured/images/thumb/sphx_glr_tricontour_thumb.png
    :alt: tricontour(x, y, z)

  :ref:`sphx_glr_plot_types_unstructured_tricontour.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">tricontour(x, y, z)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~matplotlib.axes.Axes.tricontourf.">

.. only:: html

  .. image:: /plot_types/unstructured/images/thumb/sphx_glr_tricontourf_thumb.png
    :alt: tricontourf(x, y, z)

  :ref:`sphx_glr_plot_types_unstructured_tricontourf.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">tricontourf(x, y, z)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~matplotlib.axes.Axes.tripcolor.">

.. only:: html

  .. image:: /plot_types/unstructured/images/thumb/sphx_glr_tripcolor_thumb.png
    :alt: tripcolor(x, y, z)

  :ref:`sphx_glr_plot_types_unstructured_tripcolor.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">tripcolor(x, y, z)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~matplotlib.axes.Axes.triplot.">

.. only:: html

  .. image:: /plot_types/unstructured/images/thumb/sphx_glr_triplot_thumb.png
    :alt: triplot(x, y)

  :ref:`sphx_glr_plot_types_unstructured_triplot.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">triplot(x, y)</div>
    </div>


.. raw:: html

    </div>


3D
--

3D plots using the `mpl_toolkits.mplot3d` library.



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~mpl_toolkits.mplot3d.axes3d.Axes3D.scatter.">

.. only:: html

  .. image:: /plot_types/3D/images/thumb/sphx_glr_scatter3d_simple_thumb.png
    :alt: 3D scatterplot

  :ref:`sphx_glr_plot_types_3D_scatter3d_simple.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">3D scatterplot</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~mpl_toolkits.mplot3d.axes3d.Axes3D.plot_surface.">

.. only:: html

  .. image:: /plot_types/3D/images/thumb/sphx_glr_surface3d_simple_thumb.png
    :alt: 3D surface

  :ref:`sphx_glr_plot_types_3D_surface3d_simple.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">3D surface</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~mpl_toolkits.mplot3d.axes3d.Axes3D.plot_trisurf.">

.. only:: html

  .. image:: /plot_types/3D/images/thumb/sphx_glr_trisurf3d_simple_thumb.png
    :alt: Triangular 3D surfaces

  :ref:`sphx_glr_plot_types_3D_trisurf3d_simple.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Triangular 3D surfaces</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~mpl_toolkits.mplot3d.axes3d.Axes3D.voxels.">

.. only:: html

  .. image:: /plot_types/3D/images/thumb/sphx_glr_voxels_simple_thumb.png
    :alt: 3D voxel / volumetric plot

  :ref:`sphx_glr_plot_types_3D_voxels_simple.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">3D voxel / volumetric plot</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See ~mpl_toolkits.mplot3d.axes3d.Axes3D.plot_wireframe.">

.. only:: html

  .. image:: /plot_types/3D/images/thumb/sphx_glr_wire3d_simple_thumb.png
    :alt: 3D wireframe plot

  :ref:`sphx_glr_plot_types_3D_wire3d_simple.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">3D wireframe plot</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:
   :includehidden:

   /plot_types/basic/index.rst
   /plot_types/arrays/index.rst
   /plot_types/stats/index.rst
   /plot_types/unstructured/index.rst
   /plot_types/3D/index.rst


.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-gallery

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download all examples in Python source code: plot_types_python.zip </plot_types/plot_types_python.zip>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download all examples in Jupyter notebooks: plot_types_jupyter.zip </plot_types/plot_types_jupyter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
